--- a/package.yaml
+++ b/package.yaml
@@ -47,7 +47,7 @@ library:
   source-dirs: src
 
 executables:
-  plaintextify-exe:
+  plaintextify:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
