--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,9 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- iris
+- mtl
+- pretty-terminal
 - async
 - directory
 - text
