--- a/plaintextify.cabal
+++ b/plaintextify.cabal
@@ -1,4 +1,4 @@
-cabal-version: 1.12
+cabal-version: 2.0
 
 -- This file has been generated from package.yaml by hpack version 0.36.0.
 --
@@ -33,22 +33,22 @@ library
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      ansi-terminal
-    , async
-    , base >=4.7 && <5
-    , bytestring
-    , directory
-    , filepath
-    , html-charset
+      ansi-terminal ^>= 0.11.5
+    , async ^>= 2.2.5
+    , base ^>= 4.17
+    , bytestring ^>= 0.11.5.3
+    , directory ^>= 1.3.7.1
+    , filepath ^>= 1.4.2.2
+    , html-charset ^>= 0.1.1
     , iris
-    , microlens
-    , mtl
-    , optparse-applicative
-    , pandoc
-    , pretty-terminal
-    , text
-    , text-icu
-    , wreq
+    , microlens ^>= 0.4.13.1
+    , mtl ^>= 2.2.2
+    , optparse-applicative ^>= 0.17.1.0
+    , pandoc ^>= 3.0.1
+    , pretty-terminal ^>= 0.1
+    , text ^>= 2.0.2
+    , text-icu ^>= 0.8.0.4
+    , wreq ^>= 0.5.4.2
   default-language: Haskell2010
 
 executable ptfy
