--- a/plaintextify.cabal
+++ b/plaintextify.cabal
@@ -49,7 +49,7 @@ library
     , text ^>= 2.0.2
     , text-icu ^>= 0.8.0.4
     , wreq ^>= 0.5.4.2
-  default-language: Haskell2010
+  default-language: GHC2021
 
 executable ptfy
   main-is: Main.hs
