refactor: move business logic to app/Plaintextify.hs

--- a/plaintextify.cabal
+++ b/plaintextify.cabal
@@ -54,6 +54,7 @@ library
 executable ptfy
   main-is: Main.hs
   other-modules:
+      Plaintextify
       Paths_plaintextify
   hs-source-dirs:
       app
